--- a/starter_code/pom.xml
+++ b/starter_code/pom.xml
@@ -58,12 +58,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/tomcat-maven-plugin -->
-		<dependency>
-		    <groupId>org.codehaus.mojo</groupId>
-		    <artifactId>tomcat-maven-plugin</artifactId>
-		    <version>1.1</version>
-		</dependency>
+<!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.codehaus.mojo/tomcat-maven-plugin &ndash;&gt;-->
+<!--		<dependency>-->
+<!--		    <groupId>org.codehaus.mojo</groupId>-->
+<!--		    <artifactId>tomcat-maven-plugin</artifactId>-->
+<!--		    <version>1.1</version>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
